--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   geolocator: ^8.0.3
   firebase_storage: ^10.2.7
   cached_network_image: ^3.2.0
-
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  sn_progress_dialog: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
